<resources>
    <string name="app_name">HapHap Messenger</string>
    <string name="login_activity_welcome_message">Welcome to HapHap</string>
    <string name="hint_email_phone_field">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_log_in">Log In</string>
    <string name="button_find_account">Find HapHap account or password</string>
    <string name="none" />
    <string name="name_field">Name</string>
    <string name="confirm_password_field">Confirm password</string>
    <string name="sign_up_message">Please fill in the fields below</string>
    <string name="back_to_login">Start over?</string>
</resources>