<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_welcome_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_activity_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/hint_email_phone_field"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_activity_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_activity_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/main_theme"
            android:onClick="signInWithEmailAndPassword"
            android:padding="17dp"
            android:text="@string/button_log_in"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_activity_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="#EEEEEE"
            android:text="@string/button_sign_up"
            android:textSize="15sp"
            android:textColor="#000"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_activity_button_find_account"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="0dp"
            android:backgroundTint="#FFF"
            android:text="@string/button_find_account"
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="#5F5F5F"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:layout_marginTop="-1dp"/>

    </LinearLayout>

</LinearLayout>